--- a/package.json
+++ b/package.json
@@ -49,13 +49,17 @@
     "@ckeditor/ckeditor5-paragraph": "^37.1.0",
     "@ckeditor/ckeditor5-paste-from-office": "^37.1.0",
     "@ckeditor/ckeditor5-table": "^37.1.0",
-    "@ckeditor/ckeditor5-typing": "^37.1.0"
+    "@ckeditor/ckeditor5-typing": "^37.1.0",
+    "@ckeditor/ckeditor5-ui": "^37.1.0",
+    "@ckeditor/ckeditor5-utils": "^37.1.0",
+    "@ckeditor/ckeditor5-widget": "^37.1.0"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-core": "^37.1.0",
     "@ckeditor/ckeditor5-dev-translations": "^37.0.0",
     "@ckeditor/ckeditor5-dev-utils": "^37.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^37.1.0",
+    "prettier": "^2.8.8",
     "terser-webpack-plugin": "^4.2.3",
     "typescript": "^4.8.4",
     "webpack": "^5.58.1",
